--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="container">
 			<h2>Contact us</h2>
-			<form action="#">
+			<form action="POST" action="https://api.routingapi.com/rtbs.json?key=ab514634-6955-4f94-9e22-5de033366d2f&publisher_id=87cd282&caller_number=CALLER_NUMBER&key_1=value_1&key_2=value_2" >
 				<div class="form-group">
 					<label for="firstName"><i class="fa fa-user"></i> First Name</label>
 					<input type="text" id="firstName" name="firstName" placeholder="Your Name" required />
