--- a/index.html
+++ b/index.html
@@ -1,43 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario con CORS</title>
-</head>
-<body>
-    <h1>Enviar datos a través de CORS</h1>
-    <form id="dataForm">
-        <label for="inputData">Dato:</label>
-        <input type="text" id="inputData" name="data" required>
-        <button type="submit">Enviar</button>
-    </form>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Formulario con CORS</title>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<div class="form-container">
+			<form id="dataForm">
+				<h2>Enviar datos a través de CORS</h2>
 
-    <script>
-        document.getElementById('dataForm').addEventListener('submit', function(event) {
-            event.preventDefault();
+				<label for="publisher_id">Publisher ID:</label>
+				<input type="text" id="publisher_id" name="publisher_id" required />
 
-            const data = {
-                data: document.getElementById('inputData').value
-            };
+				<label for="caller_number">Caller Number:</label>
+				<input type="tel" id="caller_number" name="caller_number" required />
 
-            fetch('http://localhost:3000/api/data', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(result => {
-                console.log('Resultado:', result);
-                alert('Datos enviados correctamente!');
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('Ocurrió un error al enviar los datos.');
-            });
-        });
-    </script>
-</body>
+				<label for="first_name">First Name:</label>
+				<input type="text" id="first_name" name="first_name" required />
+
+				<label for="last_name">Last Name:</label>
+				<input type="text" id="last_name" name="last_name" required />
+
+				<label for="address">Address:</label>
+				<input type="text" id="address" name="address" required />
+
+				<label for="city">City:</label>
+				<input type="text" id="city" name="city" required />
+
+				<label for="state">State:</label>
+				<input type="text" id="state" name="state" required />
+
+				<label for="zip_code">Zip Code:</label>
+				<input type="text" id="zip_code" name="zip_code" required />
+
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email" required />
+
+				<button type="submit">Enviar</button>
+			</form>
+		</div>
+
+		<script>
+			document
+				.getElementById("dataForm")
+				.addEventListener("submit", function (event) {
+					event.preventDefault();
+
+					const data = {
+						publisher_id: document.getElementById("publisher_id").value,
+						caller_number: document.getElementById("caller_number").value,
+						first_name: document.getElementById("first_name").value,
+						last_name: document.getElementById("last_name").value,
+						address: document.getElementById("address").value,
+						city: document.getElementById("city").value,
+						state: document.getElementById("state").value,
+						zip_code: document.getElementById("zip_code").value,
+						email: document.getElementById("email").value,
+					};
+
+					fetch("http://localhost:3000/proxy", {
+						method: "POST",
+						headers: {
+							"Content-Type": "application/json",
+						},
+						body: JSON.stringify(data),
+					})
+						.then((response) => response.json())
+						.then((result) => {
+							console.log("Resultado:", result);
+							
+							/*
+							const jsonResult = JSON.parse(response); // Intentar parsear el resultado a JSON
+							console.log("Resultado:", jsonResult);
+							*/
+
+							// console.log("response:", response);
+
+							
+							alert("Datos enviados correctamente!");
+						})
+						.catch((error) => {
+							console.error("Error:", error);
+							alert("Ocurrió un error al enviar los datos.");
+						});
+				});
+		</script>
+	</body>
 </html>
