--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -77,7 +77,7 @@
 						email: document.getElementById("email").value,
 					};
 
-					fetch("https://tu-proyecto.vercel.app/api/proxy", {  // URL del servidor en Vercel
+					fetch("https://integration-forms-r856.vercel.app/", {  // URL del servidor en Vercel
 						method: "POST",
 						headers: {
 							"Content-Type": "application/json",
