edited URL server vercel

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						email: document.getElementById("email").value,
 					};
 
-					fetch("https://integration-forms-r856.vercel.app/", {  // URL del servidor en Vercel
+					fetch("https://integration-forms.vercel.app", {  // URL del servidor en Vercel
 						method: "POST",
 						headers: {
 							"Content-Type": "application/json",
